<resources>
    <string name="app_name">OpenCart</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="category_fragment">Category Fragment</string>
    <string name="cart_fragment">Cart Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="home_item">Home</string>
    <string name="category_item">Category</string>
    <string name="cart_item">Cart</string>
    <string name="profile_item">Profile</string>
    <string name="text_search_box">Search in ...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_shop_open_cart"> Welcome to OpenCard Store 🎉</string>
    <string name="sign_in_or_sign_up_to_open_cart">Sign in to OpenCart Store</string>
    <string name="alerts">alerts</string>
    <string name="promos">promos</string>
    <string name="ticket">ticket</string>
    <string name="orders">Orders</string>
    <string name="app_version">App Version:</string>
    <string name="the_number_of_product_was_increased">The number of product was increased</string>
    <string name="the_number_of_product_was_decreased">The number of products decreased</string>
    <string name="accept_just_numbers">Price Accept Just Numbers</string>
    <string name="check_token">Check Token </string>
    <string name="products">products</string>
    <string name="accepted">When you log in, you accept all the rules</string>
    <string name="reviews">reviews</string>
    <string name="category">category</string>
    <string name="country">country</string>
    <string name="your_balance">Your Balance</string>
    <string name="transactions">Transactions</string>
    <string name="see_all">See All</string>
    <string name="voucher">Voucher</string>
    <string name="transfer">Transfer</string>
    <string name="transfer_money_was_successful">Transfer Money Was Successfully...</string>
    <string name="receiver_email">Receiver Email|Phone</string>
    <string name="amount">Amount</string>
    <string name="send_money">Send Money</string>
    <string name="voucher_added_to_your_wallet">Voucher Added To Your Wallet</string>
    <string name="enter_vouchar_code">Enter Vouchar Code</string>
    <string name="use">use</string>
    <string name="warn_wallet">Your wallet balance is not enough, Since no other payment method is active, please increase your wallet balance</string>
    <string name="delivery_date_time">Delivery date and time</string>
    <string name="send_time">Delivery time</string>
    <string name="so_date_increased_automateically">so date increased automateically</string>
    <string name="ticket_support">Support ticket</string>
    <string name="vendor">vendor</string>
    <string name="total_products">total products</string>
    <string name="followers">followers</string>
    <string name="score">score</string>
    <string name="all_products">All Products</string>
    <string name="no_ticket_exist_try_to_add">No tickets have been registered so far. Click the button below to register a new ticket</string>
    <string name="create_new_ticket">Create a ticket</string>
    <string name="subject">Whats the problem!?</string>
    <string name="create_ticket">Create a new ticket</string>
    <string name="chats">Messages</string>
    <string name="department">Department</string>
    <string name="show_old_messages">Previous messages</string>
    <string name="sepecification_title">sepecification</string>
    <string name="show_more">show more</string>
    <string name="and">&amp;</string>
    <string name="with_clicking_this_button_you_agree_to_our">By clicking this button, your agree to our </string>
    <string name="privacy">privacy</string>
    <string name="term_and_conditions">term and conditions</string>
    <string name="no_account">No Account?</string>
    <string name="have_an_account">Do you have an account?</string>
    <string name="sign_in">sign in</string>
    <string name="Knet_Visa_Mastercard">Knet - Visa - Mastercard</string>
    <string name="sold">sold</string>
    <string name="ops_There_is_nothing_here">Oops…There is nothing here</string>
    <string name="what_are_you_looking_for">what are you looking for?!</string>
    <string name="dont_have_account_yet">Do not have an account?</string>
    <string name="or">OR</string>
    <string name="change_email">Change email</string>
    <string name="change_number">Mobile number change</string>
    <string name="verification_code_sent_to">The verification code was sent to you at</string>
    <string name="for_change_passwotd">to change the password.</string>
    <string name="contact_us">contact us</string>
    <string name="Edit_Information">profile</string>
    <string name="viewed">viewed</string>
    <string name="view_all">View All</string>
    <string name="points">Points</string>
    <string name="my_tm_pay">My wallet</string>
    <string name="services">Services</string>
    <string name="add_address_to_faster_checkout">Speed ​​up your shopping process by adding an address</string>
    <string name="add_new_address">Add new address</string>
    <string name="remove_address">Delete address</string>
    <string name="address_details">Address details</string>
    <string name="search">Search</string>
    <string name="in">in</string>
    <string name="sort_by">Order By</string>
    <string name="product">product</string>
    <string name="special_label">Special offer</string>
    <string name="no_exist">out of stock</string>
    <string name="exist">stock</string>
    <string name="maximize">maximize</string>
    <string name="off">off</string>
    <string name="notificarions">Notificarions</string>
    <string name="popular_currencies">Popular currencies</string>
    <string name="active_languages">Languages List</string>
    <string name="show_more_product">See more</string>
    <string name="network">Grid</string>
    <string name="list">List</string>
    <string name="layout_product">Layout Product</string>
    <string name="add_to_wish">add to favorite</string>
    <string name="remove">remove</string>
    <string name="products_from_cart">Products From Cart</string>
    <string name="checkout_price">Summary Products</string>
    <string name="add_code">Add code</string>
    <string name="enter_coupon_code">Add a discount code</string>
    <string name="reward_code">Reward points</string>
    <string name="enter_reward">Add bonus points</string>
    <string name="order_details">Order details</string>
    <string name="details_payment">Payment details</string>
    <string name="send_to">Send to</string>
    <string name="reciever">Receiver</string>
    <string name="date_added">Order registration date</string>
    <string name="my_account">Account information</string>
    <string name="user_account_info">Account information</string>
    <string name="wish_list">Favorite list</string>
    <string name="delete_from_list">Delete</string>
    <string name="show_and_buy_product">View Product</string>
    <string name="do_you_want_to_remove_it">Are you sure you want to delete the product?</string>
    <string name="there_is_no_items">There is nothing to display!</string>
    <string name="understand">Realized</string>
    <string name="please_select_the_language_of_the_application">Please select the language of the application :)</string>
    <string name="please_select_the_currency_of_the_application">Please select the currency of the application :)</string>
    <string name="there_is_no_reward_on_your_account">No points found for you):</string>
    <string name="use_map_to_add_address">Add addresses from the map</string>
    <string name="add_address">Add address</string>
    <string name="edit_address">Edit address</string>
    <string name="top_brands">Brands</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="rm_from_wishlist">Product removed from interest</string>
    <string name="first_create_an_account_or_login">First open an account or log in to your account</string>
    <string name="users_review">User comments</string>
    <string name="review">comment</string>
    <string name="write_your_review_about_this_product">Write your comment about this product</string>
    <string name="product_specifications">Specification</string>
    <string name="technical_specifications">Technical Specifications</string>
    <string name="product_overview">Description</string>
    <string name="view_full_text">View full text</string>
    <string name="select_date">Choose a date</string>
    <string name="enter_your_review">Your opinion about this product ...</string>
    <string name="submit_review">Send</string>
    <string name="your_review">Your comment</string>
    <string name="explain_your_review">Describe your point of view</string>
    <string name="review_content">Comment text</string>
    <string name="very_bad">very bad</string>
    <string name="bad">Bad</string>
    <string name="normal">Normal</string>
    <string name="good">good</string>
    <string name="great">Great</string>
    <string name="comeon">Cancel</string>
    <string name="exit">Exit</string>
    <string name="logout">Logout</string>
    <string name="do_you_want_to_exit_from_account">Do you want to log out?</string>
    <string name="let_me_know">Let me know when stock</string>
    <string name="okay">Okay</string>
    <string name="will_let_you_know">Will inform you</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_phone">Phone number</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="special_offer">On the sale</string>
    <string name="related_products">Related products</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="redeem">redeem</string>
    <string name="error_mobile">Enter the right number phone</string>
    <string name="text_ok">we will notify you</string>
    <string name="Warning_Email_invalid">Warning: Email is invalid!</string>
    <string name="placed_on">placed on</string>
    <string name="order_detail">order detail</string>
    <string name="max_price_should_be_more_than_equal">Max price should be more than equal</string>
    <string name="and_less_than">and less than</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="reset">Reset</string>
    <string name="products_removed_success">Products removed success</string>
    <string name="existans_product">Show available goods</string>
    <string name="Please_fill_in_all_options_min_15">Fill in all the options, the comment field must be at least 15 words</string>
    <string name="minumum_product_exist">The number of this product cannot be changed</string>
    <string name="select_file">choose file</string>
    <string name="brands_info">products of brand</string>
    <string name="brands">brands</string>
    <string name="uploaded_error">uploaded error try again</string>
    <string name="uploaded_successful">uploaded successfully</string>
    <string name="networkError">Connection Faild</string>
    <string name="comments">Review</string>
    <string name="comment">reviews</string>
    <string name="Add_to_Cart2">Add to Cart</string>
    <string name="First_name">First Name</string>
    <string name="Last_name">Last Name</string>
    <string name="email">E-mail</string>
    <string name="login">login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="Open_Card_is_the_best_store">Open Card is the best store</string>
    <string name="Rules">OpenCart Rules</string>
    <string name="let_get_started">Let\'s Get Started!</string>
    <string name="Create_your_account_and_get_started">Create your account and get started</string>
    <string name="sign_up">Create an account</string>
</resources>